<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentification"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="388dp"
        android:layout_height="410dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/newPwdAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mot_de_passe" />

            <EditText
                android:id="@+id/confirmNewPwdAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="100px" />

        <Button
            android:id="@+id/validNewPwdAgentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="authenticate"
            android:text="@string/se_connecter" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>