<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_d_un_compte"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="381dp"
        android:layout_height="556dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nom" />

            <EditText
                android:id="@+id/newPwdAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prenom" />

            <EditText
                android:id="@+id/confirmNewPwdAgent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telephone" />

            <EditText
                android:id="@+id/agentTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/agentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="347dp"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dmdEnAttTV"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Type de compte :" />


            <RadioGroup
                android:id="@+id/typeCompteRG"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cacBtn"
                    android:layout_width="75dp"
                    android:layout_height="25dp"
                    android:text="CAC" />

                <RadioButton
                    android:id="@+id/cscBtn"
                    android:layout_width="76dp"
                    android:layout_height="27dp"
                    android:text="CSC" />

                <RadioButton
                    android:id="@+id/epBtn"
                    android:layout_width="59dp"
                    android:layout_height="24dp"
                    android:text="EP" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/validNewPwdAgentBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="createAccount"
            android:text="@string/creer_un_compte" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100px" />

        <TextView
            android:id="@+id/alreadyRegisterdTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>